Fixed overflow issues on landing mobile page

--- a/less/_components/_footer.less
+++ b/less/_components/_footer.less
@@ -5,6 +5,7 @@
 .footer {
   display: grid;
   width: 100%;
+  max-width: 100vw;
   row-gap: @creamcolors-sizes-medium-1;
   justify-content: space-between;
   padding: @creamcolors-sizes-medium-3 @creamcolors-sizes-medium-2
